[package]
name = "craine"
version = "0.1.0"
authors = ["DevHyperCoder <arduinoleo88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.0"
regex = "1.4.5"
serde_json = "1.0.64"
serde = {version = "1.0.0", features=["derive"]}
lazy_static = "1.0.0"
structopt = "0.3.21"
notify = "4.0.0"
